# RigidBodyEquilibrium

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindGMP.cmake  FindKnitro.cmake  FindMOSEK.cmake  TopoliteDependencies.cmake  TopoliteDownloadExternal.cmake
ext/: CMakeLists.txt
src/TopoLite/: CMakeLists.txt
src/TopoLite/IO/: InputVar.cpp  InputVar.h  JsonIOReader.cpp  JsonIOReader.h  JsonIOWriter.cpp  JsonIOWriter.h  SVGWriter.h
src/TopoLite/Mesh/: MeshBase.h  PolyMesh.cpp  PolyMesh.h  Polygon.cpp  Polygon.h  TriMesh.h  TriMeshWithFeatures.h
src/TopoLite/Stability/: CMakeLists.txt
src/TopoLite/Stability/ContactGraph/: ContactGraphBase.cpp  ContactGraphBase.h  ContactGraphEdgeBase.h  ContactGraphEdgePlane.h  ContactGraphNode.h  ContactGraphPlane.cpp  ContactGraphPlane.h
src/TopoLite/Stability/Solver/Equilibrium/: EquilibriumFrictionLessSolver.cpp  EquilibriumFrictionLessSolver.h  EquilibriumFrictionLessSolver_ConicMosek.cpp  EquilibriumFrictionLessSolver_ConicMosek.h  EquilibriumFrictionLessSolver_Mosek.cpp  EquilibriumFrictionLessSolver_Mosek.h  EquilibriumFrictionSolver.cpp  EquilibriumFrictionSolver.h  EquilibriumFrictionSolver_Mosek.cpp  EquilibriumFrictionSolver_Mosek.h
src/TopoLite/Stability/Solver/Interlocking/: InterlockingSolver.cpp  InterlockingSolver.h  InterlockingSolver_Ipopt.cpp  InterlockingSolver_Ipopt.h  InterlockingSolver_Mosek.cpp  InterlockingSolver_Mosek.h
src/TopoLite/Stability/Solver/Interlocking/backup/: InterlockingSolver_Clp.cpp  InterlockingSolver_Clp.h
src/TopoLite/Utility/: CMakeLists.txt  ConvexHull2D.h  GeometricPrimitives.h  PolyPolyBoolean.h  SmallestEnclosingCircle.cpp  SmallestEnclosingCircle.h  SphereGeometry.h  TopoObject.h  earcut.hpp  simple_svg.hpp
test/: CMakeLists.txt
test/IO/: Test_InputVar.cpp  Test_JsonReaderIO.cpp  Test_JsonWriterIO.cpp  Test_SVGWriter.cpp
test/Mesh/: Test_CrossMesh.cpp  Test_PolyMesh.cpp  Test_PolyMesh_AABBTree.cpp
test/Stability/: CMakeLists.txt  Test_ContactGraph.cpp  Test_EquilibriumFrictionLessSolver_Mosek.cpp  Test_EquilibriumFriction_Mosek.cpp  Test_EquilibriumSolver.cpp  Test_toymodel_mosek.cpp
test/Utility/: Test_GeometricPrimitives.cpp  Test_SimpleSVG.cpp
